sass/_bootstrap.scss
// Override bootstrap variables
$font-size-base: 1.1rem;
$line-height-base: 1.4;
$navbar-dark-color: #fcf1e7 !default;
$navbar-dark-hover-color: #e0ad05 !default;
$navbar-dark-active-color: #bb681a !default;
$danger: #F14454;
$warning: #F4D15E;
$success: #10B981;
$primary: #18110f;
$secondary: #fff5eb;
$enable-negative-margins: true;
$light: #fcf1e7;

$font-sizes: (
  1: 4.5rem,
  2: 2.5rem,
  3: 2rem,
  4: 1.5rem,
  5: 1.25rem,
  6: 1rem
);

// Import bootstrap
@import '../node_modules/bootstrap/scss/bootstrap.scss';

